tests/models/enum/unnamed/vec/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        Vec<()>
    ),
}
fn main() {}
